0.04

0.03 2024-02-29T18:26:49+01:00
 - Improve ERRORS section in doc.
 - Rewrite to new Mo::utils::Language and its new error message.
 - Update copyright years.

0.02 2023-06-21T12:32:30+02:00
 - Add ERRORS section to doc.
 - Add tests for errors in constructor.
 - Fix default value of type.
 - Fix link to repository and bugtracker.

0.01 2023-06-10T18:59:18+02:00
 - First version.