@@ -67,6 +67,7 @@ ERRORS
                              Possible strings: %s
              From Mo::utils::Language:
                      Parameter 'lang' doesn't contain valid ISO 639-1 code.
+                             Codeset: %s
                              Value: %s
 
 EXAMPLE
