@@ -1,4 +1,5 @@
 0.04
+ - Rewrite to use of check_language_639_1().
 
 0.03 2024-02-29T18:26:49+01:00
  - Improve ERRORS section in doc.
